# syslog_monitor

./: .env  Cargo.toml
src/: db.rs  main.rs  models.rs  schema.rs  send_mail.rs  timer.rs
