[package]
name = "rust_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
diesel = { version = "2.1.4",  features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
lettre = { version = "0.11.3", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
regex = "1.10.3"
